terraform/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

provider "aws" {
  region = var.aws_region
}

# Security Group - Open for Lab Testing
resource "aws_security_group" "cdc_lab_sg" {
  name        = "cdc-prod-sg-terraform"
  description = "Security group for CDC pipeline lab"

  # SSH, Airflow UI, Kafka Connect, Postgres open to anywhere for testing
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.my_ip]
  }
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = [var.my_ip]
  }
  ingress {
    from_port   = 8083
    to_port     = 8083
    protocol    = "tcp"
    cidr_blocks = [var.my_ip]
  }
  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = [var.my_ip]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

data "aws_iam_instance_profile" "existing_profile" {
  name = var.iam_role_name
}

data "aws_ami" "ubuntu" {
  most_recent = true
  owners      = ["099720109477"] # Canonical
  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd-gp3/ubuntu-noble-24.04-amd64-server-*"]
  }
  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}

resource "aws_instance" "cdc_lab_ec2" {
  ami                    = data.aws_ami.ubuntu.id
  instance_type          = var.instance_type
  key_name               = var.key_pair_name
  vpc_security_group_ids = [aws_security_group.cdc_lab_sg.id]
  iam_instance_profile   = data.aws_iam_instance_profile.existing_profile.name

  root_block_device {
    volume_size = 30
    volume_type = "gp3"
  }

 user_data = templatefile("user_data.sh", {
    sf_acc  = var.snowflake_account
    sf_user = var.snowflake_user
    sf_pass = var.snowflake_password
  })
}

output "airflow_url" {
  value = "http://${aws_instance.cdc_lab_ec2.public_ip}:8080"
}
